Fix animation overflow

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -35,6 +35,7 @@ a {
 }
 
 body {
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
